--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -4088,7 +4088,58 @@
   display: none;
 }
 
+.room__empty .room__images img {
+  filter: grayscale(1);
+}
+
+.room__empty .room__left {
+  grid-column: 1 / 3;
+}
+
+.room__empty .room__left .no-date {
+  padding: 12px 0 12px 12px;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 600;
+}
+
+.no-date__text span {
+  display: inline-block;
+  padding: 2px 6px;
+  background-color: var(--color-new-1);
+  margin-top: 4px;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  border-radius: 4px;
+}
+
 @media (max-width: 900px) {
+  .no-date__text span {
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 500;
+  }
+  .room__empty .room__left {
+    grid-column: auto;
+  }
+  .room__empty .room__left .no-date svg {
+    width: 26px;
+    height: 26px;
+    flex-shrink: 0;
+  }
+
+  .room__empty .room__left .no-date {
+    gap: 8px;
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 500;
+    padding: 4px;
+  }
+
   .object__galery {
     display: block;
   }
