--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -1976,7 +1976,11 @@
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   display: -webkit-box;
-  overflow: hidden;
+  overflow: hidden!important;
+}
+
+.about__text-hide p {
+  line-height: 16px !important;
 }
 
 .about__text_hide .about__text-show a:before {
