--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -2799,6 +2799,8 @@
 
 .review .list_gallery .list__link {
   display: block;
+  height: 87px;
+  min-width: 50px;
 }
 
 .review .list_gallery .list__link:hover {
@@ -3477,9 +3479,9 @@
     border-radius: 12px;
   }
 
-  .review .list_gallery .list__item {
+  /* .review .list_gallery .list__item {
     display: none;
-  }
+  } */
 
   .review .list_gallery .list__item:first-child,
   .review .list_gallery .list__item:nth-child(2),
