--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -2791,7 +2791,10 @@
 .review .list_gallery {
   display: flex;
   gap: 2px;
-  width: max-content;
+  /* width: max-content; */
+  overflow: hidden;
+  border-radius: 12px;
+  overflow-x: auto;
 }
 
 .review .list_gallery .list__item {
@@ -2799,8 +2802,8 @@
 
 .review .list_gallery .list__link {
   display: block;
-  height: 87px;
-  min-width: 50px;
+  height: 67px;
+  min-width: 67px;
 }
 
 .review .list_gallery .list__link:hover {
@@ -3475,7 +3478,7 @@
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
     max-width: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     border-radius: 12px;
   }
 
