--- a/local/components/naturalist/empty/templates/flights/style.css
+++ b/local/components/naturalist/empty/templates/flights/style.css
@@ -5,7 +5,9 @@
     src: url(../../../../../templates/main/assets/fonts/TTTravelsNext-Regular.woff2) format("woff2"),
     url(../../../../../templates/main/assets/fonts/TTTravelsNext-Regular.woff) format("woff");
 }
-
+.preloader{
+    background: #dbaa81;
+}
 .wrapper {
     margin-top: 200px;
 }
@@ -53,8 +55,7 @@
     max-width:1200px;
     min-width:360px;
     box-sizing: border-box;
-
-
+    width: 100%;
 }
 
 .d-f{
@@ -131,5 +132,9 @@
         justify-content: center;
     }
 
+}
+
+img[src='https://www.travelpayouts.com/powered_by/img/as.png']{
+    display:none;
 }
 
