--- a/local/components/naturalist/empty/templates/flights/style.css
+++ b/local/components/naturalist/empty/templates/flights/style.css
@@ -1,24 +1,42 @@
+
 @font-face {
     font-family: "TT Travels Next";
     font-style: normal;
     font-weight: 600;
     src: url(../../../../../templates/main/assets/fonts/TTTravelsNext-Regular.woff2) format("woff2"),
-    url(../../../../../templates/main/assets/fonts/TTTravelsNext-Regular.woff) format("woff");
+    url(../../../../../templates/main/assets/fonts/TTTravelsNext-Regular.woff) format("woff"),
+    url(../../../../../templates/main/assets/fonts/TTTravelsNext-Regular.ttf) format("truetype");
+}
+/*.container{*/
+/*    max-width: 109rem;*/
+/*    width: 100%;*/
+/*}*/
+.wrapper-f{
+    width: 90%; /* или любое другое значение, например, 80% */
+    max-width: 109rem; /* Максимальная ширина для больших экранов */
+    margin: 0 auto;
+
 }
 .preloader{
     background: #dbaa81;
 }
 .wrapper {
-    margin-top: 200px;
+    margin-top: 60px;
 }
 
 .flights-widget{
     margin: 0 auto;
-    max-width:1200px;
+    width: 100%;
     min-width:360px;
     min-height: 360px;
     border-radius: 16px;
     box-sizing: border-box;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background: url(/local/templates/main/assets/img/background-widget.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 
 }
 
@@ -26,23 +44,26 @@
     width: 100%;
     height: 100%;
     gap:27px;
+
 }
 .preview__title img{
     width: 222px;
 }
 .preview__slogan{
-    font-family: TT Travels Next;
     width: 553px;
     color:white;
     text-align: center;
     font-size: 32px;
+
+}
+.preview__slogan h1{
+    font-family: "TT Travels Next", sans-serif !important;
+    font-weight: bold !important;
 }
 .flights-form{
     margin: 0 auto;
     margin-top: 41px;
-    max-width: 1200px;
-    min-width: 553px;
-    box-sizing: border-box;
+    width: 100%;
     box-sizing: border-box;
 }
 .flights-form tp-cascoon{
@@ -52,10 +73,10 @@
 
 .why-naturalist{
     margin: 0 auto;
-    max-width:1200px;
+    width: 100%;
     min-width:360px;
     box-sizing: border-box;
-    width: 100%;
+
 }
 
 .d-f{
@@ -80,7 +101,7 @@
     flex-wrap:wrap;
 }
 .popular-places{
-    max-width:1200px;
+    width: 100%;
     min-width:360px;
     box-sizing: border-box;
     margin: 0 auto;
@@ -95,9 +116,10 @@
 .popular-places__widget-items{
     flex-wrap:wrap;
     width: 100%;
+    gap:76px;
 }
 .flights-map{
-    max-width:1200px;
+    width: 100%;
     min-width:360px;
     width: 100%;
     margin: 0 auto;
@@ -106,6 +128,15 @@
 }
 .flights-map tp-cascoon{
     width: 100% !important;
+}
+
+@media (max-width: 1200px){
+    .flights-map {
+        width: 90%;
+    }
+    .flights-form tp-cascoon{
+        width: 90%;
+    }
 }
 @media (min-width: 800px){
     body {
@@ -127,11 +158,46 @@
         width: 90%;
     }
 }
-@media (max-width: 767px){
+@media (max-width: 1078px){
     .popular-places__widget-items{
         justify-content: center;
+        gap: 76px;
     }
 
+}
+
+@media (max-width: 600px){
+    .flights-widget {
+        background: url(/local/templates/main/assets/img/banner-mobile.png);
+        background-size: cover; /* Измените на contain, если нужно */
+        background-position: center; /* Центрируем изображение */
+        background-repeat: no-repeat; /* Не повторять изображение */
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: end;
+        padding-bottom: 20px;
+    }
+}
+
+@media (max-width: 400px){
+    .flights-widget {
+        margin: 0 auto;
+        width: 100%;
+        min-width: 70px;
+        min-height: 260px;
+        border-radius: 16px;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: end;
+        padding-bottom: 20px;
+        max-width: 358px;
+        background: url(/local/templates/main/assets/img/banner-mobile.png);
+        background-size: cover; /* Измените на contain, если нужно */
+        background-position: center; /* Центрируем изображение */
+        background-repeat: no-repeat; /* Не повторять изображение */
+    }
 }
 
 img[src='https://www.travelpayouts.com/powered_by/img/as.png']{
