--- a/local/components/naturalist/empty/templates/flights/style.css
+++ b/local/components/naturalist/empty/templates/flights/style.css
@@ -15,6 +15,7 @@
     width: 90%; /* или любое другое значение, например, 80% */
     max-width: 93rem; /* Максимальная ширина для больших экранов */
     margin: 0 auto;
+    margin-top: 50px;
 
 }
 .preloader{
@@ -27,7 +28,6 @@
 .flights-widget{
     margin: 0 auto;
     width: 100%;
-    min-width:360px;
     min-height: 360px;
     border-radius: 16px;
     box-sizing: border-box;
@@ -73,7 +73,6 @@
 .why-naturalist{
     margin: 0 auto;
     width: 100%;
-    min-width:360px;
     box-sizing: border-box;
 
 }
@@ -101,7 +100,7 @@
 }
 .popular-places{
     width: 100%;
-    min-width:360px;
+
     box-sizing: border-box;
     margin: 0 auto;
 }
@@ -119,8 +118,7 @@
 }
 .flights-map{
     width: 100%;
-    min-width:360px;
-    width: 100%;
+
     margin: 0 auto;
     margin-top: 102px;
     box-sizing: border-box;
@@ -183,7 +181,6 @@
     .flights-widget {
         margin: 0 auto;
         width: 100%;
-        min-width: 70px;
         min-height: 260px;
         border-radius: 16px;
         box-sizing: border-box;
