--- a/local/components/naturalist/empty/templates/flights/style.css
+++ b/local/components/naturalist/empty/templates/flights/style.css
@@ -20,13 +20,11 @@
     max-width: 1200px; /* Максимальная ширина 1200px */
     margin: 0 auto;
     margin-top: 50px;
+    box-sizing: border-box;
 
 }
 .preloader{
     background: #dbaa81;
-}
-.wrapper {
-    margin-top: 60px;
 }
 
 .flights-widget{
@@ -110,10 +108,14 @@
 }
 .popular-places__title{
     width: 100%;
-    padding-bottom: 30px;
+    padding-bottom: 12px;
     border-bottom:1px solid black;
     margin-bottom: 50px;
+    font-weight: 700;
 
+}
+.popular-places__title h2{
+    font-weight:700;
 }
 .popular-places__widget-items{
     flex-wrap:wrap;
@@ -130,12 +132,63 @@
 .flights-map tp-cascoon{
     width: 100% !important;
 }
+
+.custom-banner{
+    margin: 0 auto;
+    width: 100%;
+    background: url(/local/templates/main/assets/img/custom-banner.png) no-repeat, center center;
+    height: 360px;
+    border-radius:16px;
+    margin-top: 110px;
+    margin-bottom: 56px;
+    box-shadow: 0px 0px  2px black;
+    padding:60px;
+}
+.custom-banner__prev{
+    width: 100%;
+    height: 100%;
+    display:flex;
+    justify-content: end;
+    align-items: start;
+    flex-direction: column;
+    gap:17px;
+
+}
+.custom-banner__prev span{
+    color:white;
+    font-family: "TT Travels Next" !important;
+    font-weight: 700;
+    font-size:29.91px;
+    text-shadow: 1px 1px 1px black;
+    max-width:388px;
+}
+.custom-banner__prev a{
+    text-align:center;
+
+    width: 175px;
+    padding-bottom: 19px;
+    padding-top:19px;
+    border-radius: 46.49px;
+    background: #FBEFD5;
+    color:#1C2D50;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-family: "TT Travels Next" !important;
+    font-size: 10px;
+
+
+}
+
+@media(min-width: 1268px) and (max-width: 1024){
+    .wrapper-f{
+
+    }
+}
+
+
 @media (min-width: 800px){
     body {
         position: relative;
-    }
-    .wrapper {
-        margin-top: 70px;
     }
     .flights-map,
     .popular-places,
@@ -170,14 +223,32 @@
 @media (max-width: 600px){
     .flights-widget {
         background: url(/local/templates/main/assets/img/banner-mobile.png);
-        background-size: cover; /* Измените на contain, если нужно */
-        background-position: center; /* Центрируем изображение */
-        background-repeat: no-repeat; /* Не повторять изображение */
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         box-sizing: border-box;
         display: flex;
         justify-content: center;
         align-items: end;
         padding-bottom: 20px;
+    }
+
+    .custom-banner{
+        background: url(/local/templates/main/assets/img/custom-banner-mobile.png) no-repeat center center;
+        background-size: cover;
+        padding:11px;
+
+    }
+    .custom-banner__prev a{
+        width: 175px;
+        padding-top: 12px;
+        padding-bottom: 12px;
+    }
+    .custom-banner__prev span{
+        font-size: 16px;
+        font-weight:700;
+        max-width:252px;
+        width: 100%;
     }
 }
 
@@ -208,14 +279,21 @@ img[src='https://www.travelpayouts.com/powered_by/img/as.png']{
     display:none;
 }
 
-@media(min-width: 1899px) and (max-width:900px)
-{
-    .wrapper-f {
-        width: 90%;
-        max-width: 110rem;
-        margin: 0 auto;
-        margin-top: 0px;
-        margin-top: 50px;
+@media  (max-width:1243px) {
+    .wrapper-f{
+        width: calc(100% - 80px);
+    }
+}
+
+@media(max-width: 1022px){
+    .wrapper-f{
+        width: calc(100% - 27px);
+    }
+}
+
+@media  (max-width: 1015px) {
+    .wrapper-f{
+        width: calc(100% - 32px);
     }
 }
 
