--- a/local/templates/main/components/bitrix/menu/sitemap/style.css
+++ b/local/templates/main/components/bitrix/menu/sitemap/style.css
@@ -1,20 +1,24 @@
+* {
+    font-family: "Lato", sans-serif !important;
+  }
 .content__sitemap {
     margin: auto;
     display: inline-block;
-    width: 78%;
+    width: 70%;
     padding: 0px;
-    padding-left: 40px;
+    padding-left: 5%;
 }
 .sidebar-navigation__sitemap {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 3%;
 }
 .sidebar-navigation__sitemap .list__link {
     font-family: Lato;
     font-family: var(--header-text-font-family);
     font-weight: 500;
     line-height: 2rem;
-    padding: 1.5rem 0;
+    padding: 10px 0;
 }
 @media (max-width: 700px){
     .sidebar-navigation__sitemap {
