--- a/local/templates/main/components/bitrix/menu/sitemap/style.css
+++ b/local/templates/main/components/bitrix/menu/sitemap/style.css
@@ -20,8 +20,17 @@
     line-height: 2rem;
     padding: 10px 0;
 }
+.footer {
+    position: relative;
+}
+@media (max-width: 1025px){
+.content__sidebar{
+    display: none;
+}
+}
 @media (max-width: 700px){
     .sidebar-navigation__sitemap {
         grid-template-columns: 1fr;
+        gap: 24px;
     }
 }
