--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -1091,6 +1091,10 @@
   border-top: 0.1rem solid var(--color-black);
 }
 
+#zuck-modal-content .story-viewer .head .left .info{
+  border: unset;
+}
+
 .info .list {
   -webkit-box-align: center;
   -ms-flex-align: center;
