122017 | Доработка поиска номеров броневика, добавил взрослых и тарифы в карточку

--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -2428,6 +2428,15 @@
   background-color: var(--color-new-1);
 }
 
+
+.room_offer {
+  position: relative;
+  padding: 2px 8px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+}
+
 .room__cancelation {
   position: relative;
   padding: 8px;
@@ -2550,6 +2559,10 @@
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.8;
+
+  padding: 9px 16px;
+  background-color: #F4E6CB;
+  border-radius: 8px;
 }
 
 .room__price-per-night {
