--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -1212,7 +1212,7 @@
   font-weight: 400;
 }
 
-.reviews__list {
+.section_reviews .reviews__list {
   margin-top: 20px;
   display: none;
   flex-direction: column;
@@ -1220,7 +1220,7 @@
   gap: 20px;
 }
 
-.reviews__list.active{
+.section_reviews .reviews__list.active{
   display: flex;
 }
 
