--- a/local/templates/main/components/bitrix/menu/header_catalog/style.css
+++ b/local/templates/main/components/bitrix/menu/header_catalog/style.css
@@ -34,8 +34,11 @@
     position: relative;
 }
 
-.list__item_catalog:hover .catalog_menu {
-    display: block;
+@media screen and (min-width: 1024px){
+
+    .list__item_catalog:hover .catalog_menu {
+        display: block;
+    }
 }
 
 .box1 {
