--- a/local/templates/main/assets/css/object.css
+++ b/local/templates/main/assets/css/object.css
@@ -1215,13 +1215,11 @@
 .section_reviews .reviews__list {
   margin-top: 20px;
   display: none;
-  flex-direction: column;
-  gap: 20px;
   gap: 20px;
 }
 
 .section_reviews .reviews__list.active{
-  display: flex;
+  display: grid;
 }
 
 .share {
@@ -2894,17 +2892,9 @@
 }
 
 .review__gallery {
-  border-top-left-radius: 12px;
-  border-bottom-left-radius: 12px;
   overflow: hidden;
   width: 100%;
   border-radius: 12px;
-}
-
-.review__gallery>ul>li:last-child {
-  border-top-right-radius: 12px;
-  border-bottom-right-radius: 12px;
-  overflow: auto;
 }
 
 .review .list_gallery {
