122503 | Убрать всплывающий список каталога

--- a/local/templates/main/components/bitrix/menu/header_catalog/style.css
+++ b/local/templates/main/components/bitrix/menu/header_catalog/style.css
@@ -35,10 +35,9 @@
 }
 
 @media screen and (min-width: 1024px){
-
-    .list__item_catalog:hover .catalog_menu {
+    /*.list__item_catalog:hover .catalog_menu {
         display: block;
-    }
+    }*/
 }
 
 .box1 {
